force-app/main/default/objects/Dev_Form_Answers__c/Dev_Form_Answers__c.object-meta.xml
<CustomObject>
    <description>Developer Marketing :</description>
    <label>Dev Form Answers</label>
    <nameField>
        <displayFormat>DSAN-{00000}</displayFormat>
        <label>AnswerID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dev Form Answer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>