force-app/main/default/objects/Dev_Form_Answers__c/fields/Ask_Order__c.field-meta.xml
<CustomField>
    <fullName>Ask_Order__c</fullName>
    <label>Ask Order</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>