force-app/main/default/objects/Dev_Form_Answers__c/fields/Dev_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Dev_Contact_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Contact ID</label>
    <referenceTo>Dev_Contact__c</referenceTo>
    <relationshipLabel>Dev Form Answer</relationshipLabel>
    <relationshipName>Dev_Form_Answer</relationshipName>
    <type>Lookup</type>
</CustomField>