force-app/main/default/objects/Dev_Form_Answers__c/fields/Dev_Form_ID__c.field-meta.xml
<CustomField>
    <fullName>Dev_Form_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Dev Form ID</label>
    <referenceTo>Dev_Forms__c</referenceTo>
    <relationshipLabel>Dev Form Answer</relationshipLabel>
    <relationshipName>Dev_Form_Answer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>