force-app/main/default/objects/Dev_Form_Answers__c/fields/Dev_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>Dev_Form_Name__c</fullName>
    <formula>Dev_Form_ID__r.Form_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dev Form Name</label>
    <type>Text</type>
</CustomField>