force-app/main/default/objects/Dev_Form_Answers__c/fields/Dev_Form_Question__c.field-meta.xml
<CustomField>
    <fullName>Dev_Form_Question__c</fullName>
    <formula>Dev_Form_Questions__r.Question_Text_Limited__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dev Form Question</label>
    <type>Text</type>
</CustomField>