force-app/main/default/objects/Dev_Form_Answers__c/fields/Dev_Form_Questions__c.field-meta.xml
<CustomField>
    <fullName>Dev_Form_Questions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dev Form Questions</label>
    <referenceTo>Dev_Form_Questions__c</referenceTo>
    <relationshipLabel>Dev Form Answer (Dev Form Questions)</relationshipLabel>
    <relationshipName>Dev_Form_Answer</relationshipName>
    <type>Lookup</type>
</CustomField>