force-app/main/default/objects/Dev_Form_Answers__c/fields/Flagged__c.field-meta.xml
<CustomField>
    <fullName>Flagged__c</fullName>
    <label>Flagged</label>
    <length>8</length>
    <type>Text</type>
</CustomField>