force-app/main/default/objects/Dev_Form_Answers__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>