force-app/main/default/objects/Dev_Form_Answers__c/fields/Source_Response_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Response_ID__c</fullName>
    <label>Source Response ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>